<resources>
    <string name="app_name">AAD Sample</string>

    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="flag_description">Vietnam flag</string>
    <string name="display_notification">Display notification</string>
    <string name="display_snackbar">Display Snackbar</string>
    <string name="restart">Restart to apply changes.</string>

    <string name="list_activity">List activity</string>
    <string name="dummy_text">Hoge hoge</string>
</resources>
